--- a/src/popup.html
+++ b/src/popup.html
@@ -4,8 +4,6 @@
     <link rel="stylesheet" href="button.css" />
   </head>
   <body>
-    <input type="text" name="search" id="search" />
-    <p id="output"></p>
-    <script src="popup.js"></script>
+    <div id="root"></div>
   </body>
 </html>
